# acrocyte_coding_assessment

./: .gitignore  Coding_Assessment_DOC.md  README.md
working_directory/: download_data.py  notebook.ipynb  pyproject.toml  requirements.txt  verify_data.py  warmup.py
