[project]
name = "microscope-assessment"
version = "0.1.0"
description = "Microscope coding assessment working directory"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "tifffile>=2024.1",
    "scikit-image>=0.22",
    "matplotlib>=3.8",
    "jupyter>=1.0",
    "jupyterlab>=4.0",
    "requests>=2.31",
]
